@@ -1,7 +1,8 @@
 Changes between 2.4.2 and 2.4.3
 -----------------------------------
 
-- In assertion rewriting mode on Python 2, fix the detection of coding cookies.
+- In assertion rewriting mode on Python 2, fix the detection of coding
+  cookies. See issue #330.
 
 Changes between 2.4.1 and 2.4.2
 -----------------------------------
